--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1000,7 +1000,6 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
   color: #45505b;
   font-size: 14px;
   text-align: center;
@@ -1039,7 +1038,7 @@ section {
 }
 #footer .social-links a:hover {
   background: #0678e3;
-  color: #fff;
+  /*color: #fff;*/
   text-decoration: none;
 }
 #footer .copyright {
